Work on Frontend Templates

--- a/school_management/Templates/Admin_Navbar.html
+++ b/school_management/Templates/Admin_Navbar.html
@@ -13,29 +13,29 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="side_nav">
         <div class="type">
             <h4>A</h4>
         </div>
 
         <div class="links">
-            <a href=""><span class="material-symbols-outlined">
+            <a href="" title="Home"><span class="material-symbols-outlined">
                     home
                 </span></a>
-            <a href=""><span class="material-symbols-outlined">
+            <a href="" title="Student"><span class="material-symbols-outlined">
                     school
                 </span></a>
-            <a href=""><span class="material-symbols-outlined">
+            <a href="" title="Teacher"><span class="material-symbols-outlined">
                     person
                 </span></a>
-            <a href=""><span class="material-symbols-outlined">
+            <a href="" title="Notice Board"><span class="material-symbols-outlined">
                     note_alt
                 </span></a>
-            <a href=""><span class="material-symbols-outlined">
+            <a href="" title="Employee"><span class="material-symbols-outlined">
                     person_apron
                 </span></a>
 
-            <a href=""><span class="material-symbols-outlined">
+            <a href="" title="Info"><span class="material-symbols-outlined">
                     info
                 </span></a>
         </div>
