--- a/school_management/StaticsFiles/Styles/Navbar.css
+++ b/school_management/StaticsFiles/Styles/Navbar.css
@@ -1,16 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+
 :root{
     --primary: #00273a;
     --secondary: #FB7D5B;
     --white: rgb(232, 232, 232);
+    --background-white: rgba(202, 200, 200, 0.304);
+    --main-background : rgba(0, 0, 0, 0.018);
+    --grey: #8e8b92;
+    --poppins: 'Poppins', sans-serif;
 }
 
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: var(--poppins);
 }
 
-nav{
+.side_nav{
+    width: 80px;
+    cursor: pointer;
     height: 100%;
     position: fixed;
     display: flex;
@@ -21,22 +31,37 @@ nav{
 
     > .type{
         
+        text-align: center;
+        height: 40px;
+        width: 40px;
+        border-radius: 30px;
+        background-color: var(--secondary);
+
         > h4{
-            border-radius: 30px;
-            background-color: var(--secondary);
+            text-align: center;
             font-size: 30px;
-            padding: 5px;
+            color: var(--white);
+            
         }
     }
 
     > .links{
-        margin-top: 20px;
+        margin-top: 30px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 30px;
+        align-items: center;
+        justify-content: center;
 
         > a{
             color: var(--white);
+            
+        }
+        
+        > a:nth-child(1){
+            padding: 10px;
+            border-radius: 10px;
+            background-color: var(--background-white);
         }
     }
 }
