Work on Frontend Templates

--- a/school_management/Templates/Admin_Dashboard.html
+++ b/school_management/Templates/Admin_Dashboard.html
@@ -16,37 +16,18 @@
     {% include "Admin_Navbar.html" %}
 
     <div class="dashboard-container">
-        <nav class="navbar">
-            <div class="title">
-                <h4>Dashboard</h4>
-            </div>
+        {% include "Admin_uNabvar.html" %}
+        <div class="total-counter">
+            <div class="card">
+                <div class="avatar">
 
-            <div class="menus">
-                <a href=""><span class="material-symbols-outlined">
-                        search
-                    </span></a>
-                <a href=""><span class="material-symbols-outlined">
-                        chat_bubble
-                    </span></a>
-                <a href=""><span class="material-symbols-outlined">
-                        notifications
-                    </span></a>
-                <a href=""><span class="material-symbols-outlined">
-                        settings
-                    </span></a>
-
-                <div class="profile">
-                    <div class="avatar">
-                        <span class="material-symbols-outlined">
-                            account_circle
-                        </span>
-                    </div>
-                    <div class="name">
-                        <p>Abhishek</p>
-                    </div>
+                </div>
+                <div class="category">
+                    <p>Student</p>
+                    <h4>932</h4>
                 </div>
             </div>
-        </nav>
+        </div>
     </div>
 </body>
 
