--- a/school_management/Templates/Admin_Dashboard.html
+++ b/school_management/Templates/Admin_Dashboard.html
@@ -20,10 +20,45 @@
         <div class="total-counter">
             <div class="card">
                 <div class="avatar">
-
+                    <span class="material-symbols-outlined">
+                        school
+                    </span>
                 </div>
                 <div class="category">
                     <p>Student</p>
+                    <h4>932</h4>
+                </div>
+            </div>
+            <div class="card">
+                <div class="avatar">
+                    <span class="material-symbols-outlined">
+                        person
+                        </span>
+                </div>
+                <div class="category">
+                    <p>Teacher</p>
+                    <h4>932</h4>
+                </div>
+            </div>
+            <div class="card">
+                <div class="avatar">
+                    <span class="material-symbols-outlined">
+                        person_apron
+                        </span>
+                </div>
+                <div class="category">
+                    <p>Employee</p>
+                    <h4>932</h4>
+                </div>
+            </div>
+            <div class="card">
+                <div class="avatar">
+                    <span class="material-symbols-outlined">
+                        note_alt
+                        </span>
+                </div>
+                <div class="category">
+                    <p>Notes</p>
                     <h4>932</h4>
                 </div>
             </div>
