--- a/school_management/Templates/Admin_Navbar.html
+++ b/school_management/Templates/Admin_Navbar.html
@@ -22,10 +22,10 @@
             <a href="" title="Home"><span class="material-symbols-outlined">
                     home
                 </span></a>
-            <a href="" title="Student"><span class="material-symbols-outlined">
+            <a href="{% url 'admin_student' %}" title="Student"><span class="material-symbols-outlined">
                     school
                 </span></a>
-            <a href="" title="Teacher"><span class="material-symbols-outlined">
+            <a href="{% url 'admin_teacher' %}" title="Teacher"><span class="material-symbols-outlined">
                     person
                 </span></a>
             <a href="" title="Notice Board"><span class="material-symbols-outlined">
