Work on Frontend Templates

--- a/school_management/Templates/Admin_Student.html
+++ b/school_management/Templates/Admin_Student.html
@@ -13,6 +13,11 @@
 
     <div class="dashboard-container">
         {% include "Admin_uNabvar.html" %}
+
+        <div class="search-add">
+            <input type="text" name="search-student" placeholder="Search Here...">
+        </div>
+
     </div>
 
 </body>
