--- a/school_management/StaticsFiles/Styles/Admin_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Admin_Dashboard.css
@@ -35,6 +35,7 @@ body {
             padding: 10px;
             border-radius: 10px;
             width: fit-content;
+            color: var(--primary);
 
             >.avatar {
                 margin-right: 10px;
@@ -116,6 +117,8 @@ body {
             font-size: 30px;
             width: 40px;
             margin-right: 0px;
+            position: relative;
+            top: 5px;
         }
 
         >#search-input {
@@ -198,19 +201,140 @@ body {
     color: white;
 }
 
-.copy-right{
+.copy-right {
     width: 100%;
     margin-top: 30px;
     background-color: var(--main-background);
 
-    > p{
+    >p {
         text-align: center;
         padding: 20px;
         font-size: 14px;
         color: var(--grey);
 
-        > span{
+        >span {
             color: var(--primary);
         }
     }
+}
+
+.teachers-card {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-wrap: wrap;
+    gap: 20px;
+
+    >.card {
+        text-align: center;
+        height: fit-content;
+        padding: 10px;
+        width: 250px;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+        >.img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background-color: var(--primary);
+            position: relative;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        > .intro{
+            > h4{
+                color: var(--primary);
+                font-size: 18px;
+                margin-top: 20px;
+            }
+
+            > p{
+            color: var(--grey);
+                margin-top: 0;
+                font-size: 14px;
+            }
+        }
+
+        > .subject{
+            margin-top: 20px;
+            font-size: 12px;
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+
+            > span{
+                border-radius: 5px;
+                padding: 2px 10px;
+            }
+
+            > :nth-child(1){
+            
+                background-color: rgba(255, 0, 0, 0.3);
+                color: red;
+            }
+            > :nth-child(2){
+                color: green;
+                background-color: rgba(0, 128, 0, 0.3);
+            }
+
+            > :nth-child(3){
+                color: rebeccapurple;
+                background-color: rgba(102, 51, 153, 0.3);
+            }
+
+            > :nth-child(4){
+                color: yellow;
+                background-color: rgba(255, 255, 0, 0.3);
+            }
+        }
+
+        > .actions{
+            margin-top: 20px;
+
+            > .left{
+
+                > a{
+                    background-color: var(--primary);
+                    color: var(--white);
+                    padding: 2px 5px;
+                    border-radius: 5px;
+                    font-size: 14px;
+                    text-decoration: none;
+
+                    > span{
+                        position: relative;
+                        font-size: 18px;
+                        top: 5px;
+                        margin-right: 2px;
+                    }
+                }
+            }
+
+            .right{
+
+                > button{
+                    outline: none;
+                    border: 0.5px solid var(--grey);
+                    padding: 2px;
+                    background-color: none;
+                    border-radius: 5px;
+
+                    > span{
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.d-flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
