--- a/school_management/StaticsFiles/Styles/Admin_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Admin_Dashboard.css
@@ -338,3 +338,93 @@ body {
     align-items: center;
     justify-content: space-between;
 }
+
+.notice{
+    width: 100%;
+    margin-top: 30px;
+    display: flex;
+    
+    > .notice-display{
+        height: 600px;
+        width: 40%;
+        overflow-y: scroll;
+        scroll-behavior: smooth;
+
+        > h4{
+            font-size: 20px;
+            color: var(--primary);
+        }
+
+        > .notice-card{
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            padding: 20px;
+            margin-top: 10px;
+
+            > h3{
+                margin-bottom: 10px;
+                text-align: justify;
+                font-size: 18px;
+            }
+
+            > p{
+                font-size: 14px;
+                text-align: justify;
+                color: var(--grey);
+            }
+
+            > .notice-details{
+                margin-top: 20px;
+                font-size: 14px;
+                color: var(--grey);
+            }
+        }
+    }
+
+    > .notice-form{
+        width: calc(100%-40%);
+        margin-left: 40px;
+
+        > h4{
+            font-size: 20px;
+            color: var(--primary);
+        }
+
+        > .form-notice{
+            padding: 20px;
+            margin-top: 10px;
+
+            > input{
+                margin-bottom: 10px;
+                border: 1px solid var(--grey);
+                height: 2.5rem;
+                width: 500px;
+                outline: none;
+                padding: 10px;
+                background-color: var(--main-background);
+            }
+
+            > textarea{
+                padding: 10px;
+                width: 500px;
+                resize: none;
+                border: 1px solid var(--grey);
+                outline: none;
+                background-color: var(--main-background);
+            }
+        }
+    }
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+
+::-webkit-scrollbar-thumb{
+    background: var(--primary);
+    border-radius: 10px;
+}
