--- a/school_management/Templates/Admin_Navbar.html
+++ b/school_management/Templates/Admin_Navbar.html
@@ -28,7 +28,7 @@
             <a href="{% url 'admin_teacher' %}" title="Teacher"><span class="material-symbols-outlined">
                     person
                 </span></a>
-            <a href="" title="Notice Board"><span class="material-symbols-outlined">
+            <a href="{% url 'admin_notice' %}" title="Notice Board"><span class="material-symbols-outlined">
                     note_alt
                 </span></a>
             <a href="" title="Employee"><span class="material-symbols-outlined">
