Work on Frontend Templates

--- a/school_management/Templates/Admin_Notice.html
+++ b/school_management/Templates/Admin_Notice.html
@@ -55,7 +55,7 @@
 
                     <div class="notice-details d-flex">
 
-                        <p class="post-by" style="color: black;">Post by School Management</p>
+                        <p class="post-by" style="color: #FB7D5B;">Post by School Management</p>
                         <p class="date">Sat, 27/10/2023</p>
 
                     </div>
@@ -71,7 +71,7 @@
 
                     <div class="notice-details d-flex">
 
-                        <p class="post-by" style="color: black;">Post by School Management</p>
+                        <p class="post-by" style="color: #FB7D5B;">Post by School Management</p>
                         <p class="date">Sat, 27/10/2023</p>
 
                     </div>
@@ -87,7 +87,7 @@
 
                     <div class="notice-details d-flex">
 
-                        <p class="post-by" style="color: black;">Post by School Management</p>
+                        <p class="post-by" style="color: #FB7D5B;">Post by School Management</p>
                         <p class="date">Sat, 27/10/2023</p>
 
                     </div>
@@ -103,7 +103,7 @@
 
                     <div class="notice-details d-flex">
 
-                        <p class="post-by" style="color: black;">Post by School Management</p>
+                        <p class="post-by" style="color: #FB7D5B;">Post by School Management</p>
                         <p class="date">Sat, 27/10/2023</p>
 
                     </div>
@@ -113,7 +113,7 @@
             <div class="notice-form">
                 <h4>Add New Notice</h4>
                 <form action="" class="form-notice">
-                    <input type="text" name="post-by" placeholder="Post By"> <br>
+                    <input type="text" name="post-by" placeholder="Post By" autofocus> <br>
                     <input type="text" name="title" placeholder="Title"> <br>
                     <textarea name="description" id="" cols="70" rows="10" placeholder="Description" form="form-notice"></textarea> <br>
                     <button type="submit">Submit</button>
