--- a/school_management/StaticsFiles/Styles/Admin_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Admin_Dashboard.css
@@ -359,6 +359,7 @@ body {
             box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
             padding: 20px;
             margin-top: 10px;
+            cursor: context-menu;
 
             > h3{
                 margin-bottom: 10px;
@@ -399,17 +400,40 @@ body {
                 height: 2.5rem;
                 width: 500px;
                 outline: none;
+                border-radius: 5px;
                 padding: 10px;
                 background-color: var(--main-background);
             }
 
             > textarea{
+                border-radius: 5px;
                 padding: 10px;
                 width: 500px;
                 resize: none;
                 border: 1px solid var(--grey);
                 outline: none;
                 background-color: var(--main-background);
+            }
+
+            > input:focus, textarea:focus{
+                border-color: var(--secondary);
+        box-shadow: 0 0 0 0.2rem #fb7e5b44;
+            }
+
+            > button{
+                padding: 10px;
+                height: 2.5rem;
+                width: fit-content;
+                outline: none;
+                border: none;
+                border-radius: 5px;
+                background-color: var(--primary);
+                color: var(--white);
+
+            }
+
+            > button:hover{
+                background: rgba(0, 39, 58, 0.80);
             }
         }
     }
@@ -427,4 +451,8 @@ body {
 ::-webkit-scrollbar-thumb{
     background: var(--primary);
     border-radius: 10px;
+}
+
+button:hover{
+    background: rgba(0, 39, 58, 0.50);
 }
