--- a/school_management/Templates/Admin_Navbar.html
+++ b/school_management/Templates/Admin_Navbar.html
@@ -31,7 +31,7 @@
             <a href="{% url 'admin_notice' %}" title="Notice Board"><span class="material-symbols-outlined">
                     note_alt
                 </span></a>
-            <a href="" title="Employee"><span class="material-symbols-outlined">
+            <a href="{% url 'admin_employee' %}" title="Employee"><span class="material-symbols-outlined">
                     person_apron
                 </span></a>
 
