--- a/school_management/StaticsFiles/Styles/Admin_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Admin_Dashboard.css
@@ -80,23 +80,26 @@ body {
                     text-align: center;
                 }
 
+
+
+            }
+        }
+
+        >.category {
+            >p {
+                font-size: 14px;
+                color: var(--grey);
             }
 
-            >.category {
-                >p {
-                    font-size: 14px;
-                    color: var(--grey);
-                }
-
-                >h4 {
-                    font-size: 18px;
-                    color: var(--primary);
-                }
+            >h4 {
+                font-size: 18px;
+                color: var(--primary);
             }
         }
     }
-
 }
+
+
 
 .search-add {
     background-color: var(--white);
@@ -170,9 +173,15 @@ body {
 
 .table {
     margin-top: 30px;
+
+    >h4 {
+        font-size: 20px;
+        color: var(--primary);
+    }
 }
 
-.student {
+.student,
+.teacher {
     border-collapse: collapse;
     width: 100%;
     cursor: pointer;
@@ -180,7 +189,9 @@ body {
 }
 
 .student td,
-.student th {
+.student th,
+.teacher td,
+.teacher th {
     /* border: 1px solid #ddd; */
     padding: 8px;
 }
@@ -189,17 +200,24 @@ body {
     background-color: #f2f2f2;
 }
 
-.student tr:hover {
+.teacher tr:nth-child(even) {
+    background-color: rgb(231, 216, 216);
+}
+
+.student tr:hover,
+.teacher tr:hover {
     background-color: #ddd;
 }
 
-.student th {
+.student th,
+.teacher th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: var(--primary);
+    background: rgb(0, 71, 107);
     color: white;
 }
+
 
 .copy-right {
     width: 100%;
@@ -244,21 +262,21 @@ body {
             justify-content: center;
         }
 
-        > .intro{
-            > h4{
+        >.intro {
+            >h4 {
                 color: var(--primary);
                 font-size: 18px;
                 margin-top: 20px;
             }
 
-            > p{
-            color: var(--grey);
+            >p {
+                color: var(--grey);
                 margin-top: 0;
                 font-size: 14px;
             }
         }
 
-        > .subject{
+        >.subject {
             margin-top: 20px;
             font-size: 12px;
             display: flex;
@@ -267,38 +285,39 @@ body {
             align-items: center;
             flex-wrap: wrap;
 
-            > span{
+            >span {
                 border-radius: 5px;
                 padding: 2px 10px;
             }
 
-            > :nth-child(1){
-            
+            > :nth-child(1) {
+
                 background-color: rgba(255, 0, 0, 0.3);
                 color: red;
             }
-            > :nth-child(2){
+
+            > :nth-child(2) {
                 color: green;
                 background-color: rgba(0, 128, 0, 0.3);
             }
 
-            > :nth-child(3){
+            > :nth-child(3) {
                 color: rebeccapurple;
                 background-color: rgba(102, 51, 153, 0.3);
             }
 
-            > :nth-child(4){
+            > :nth-child(4) {
                 color: yellow;
                 background-color: rgba(255, 255, 0, 0.3);
             }
         }
 
-        > .actions{
+        >.actions {
             margin-top: 20px;
 
-            > .left{
+            >.left {
 
-                > a{
+                >a {
                     background-color: var(--primary);
                     color: var(--white);
                     padding: 2px 5px;
@@ -306,7 +325,7 @@ body {
                     font-size: 14px;
                     text-decoration: none;
 
-                    > span{
+                    >span {
                         position: relative;
                         font-size: 18px;
                         top: 5px;
@@ -315,16 +334,16 @@ body {
                 }
             }
 
-            .right{
+            .right {
 
-                > button{
+                >button {
                     outline: none;
                     border: 0.5px solid var(--grey);
                     padding: 2px;
                     background-color: none;
                     border-radius: 5px;
 
-                    > span{
+                    >span {
                         font-size: 16px;
                     }
                 }
@@ -333,47 +352,47 @@ body {
     }
 }
 
-.d-flex{
+.d-flex {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.notice{
+.notice {
     width: 100%;
     margin-top: 30px;
     display: flex;
-    
-    > .notice-display{
+
+    >.notice-display {
         height: 600px;
         width: 40%;
         overflow-y: scroll;
         scroll-behavior: smooth;
 
-        > h4{
+        >h4 {
             font-size: 20px;
             color: var(--primary);
         }
 
-        > .notice-card{
+        >.notice-card {
             box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
             padding: 20px;
             margin-top: 10px;
             cursor: context-menu;
 
-            > h3{
+            >h3 {
                 margin-bottom: 10px;
                 text-align: justify;
                 font-size: 18px;
             }
 
-            > p{
+            >p {
                 font-size: 14px;
                 text-align: justify;
                 color: var(--grey);
             }
 
-            > .notice-details{
+            >.notice-details {
                 margin-top: 20px;
                 font-size: 14px;
                 color: var(--grey);
@@ -381,20 +400,20 @@ body {
         }
     }
 
-    > .notice-form{
+    >.notice-form {
         width: calc(100%-40%);
         margin-left: 40px;
 
-        > h4{
+        >h4 {
             font-size: 20px;
             color: var(--primary);
         }
 
-        > .form-notice{
+        >.form-notice {
             padding: 20px;
             margin-top: 10px;
 
-            > input{
+            >input {
                 margin-bottom: 10px;
                 border: 1px solid var(--grey);
                 height: 2.5rem;
@@ -405,7 +424,7 @@ body {
                 background-color: var(--main-background);
             }
 
-            > textarea{
+            >textarea {
                 border-radius: 5px;
                 padding: 10px;
                 width: 500px;
@@ -415,12 +434,13 @@ body {
                 background-color: var(--main-background);
             }
 
-            > input:focus, textarea:focus{
+            >input:focus,
+            textarea:focus {
                 border-color: var(--secondary);
-        box-shadow: 0 0 0 0.2rem #fb7e5b44;
+                box-shadow: 0 0 0 0.2rem #fb7e5b44;
             }
 
-            > button{
+            >button {
                 padding: 10px;
                 height: 2.5rem;
                 width: fit-content;
@@ -432,27 +452,27 @@ body {
 
             }
 
-            > button:hover{
+            >button:hover {
                 background: rgba(0, 39, 58, 0.80);
             }
         }
     }
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
-  }
+}
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background: var(--primary);
     border-radius: 10px;
 }
 
-button:hover{
+button:hover {
     background: rgba(0, 39, 58, 0.50);
 }
