--- a/school_management/Templates/Admin_Dashboard.html
+++ b/school_management/Templates/Admin_Dashboard.html
@@ -63,6 +63,134 @@
                 </div>
             </div>
         </div>
+
+        <div class="table">
+            <h4>Teacher Details</h4>
+            <table class="teacher">
+                <tr>
+                    <th>Name</th>
+                    <th>ID</th>
+                    <th>Subject</th>
+                    <th>Qulification</th>
+                    <th>Performance</th>
+                    <th>Contact</th>
+                    <th>Salary</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td>Abhishek Singh</td>
+                    <td>198438</td>
+                    <td>Programming</td>
+                    <td>B.Tech</td>
+                    <td>Good</td>
+                    <td>8532800542</td>
+                    <td>18000</td>
+                    <td><span class="material-symbols-outlined">
+                            visibility
+                        </span>
+                        <span class="material-symbols-outlined">
+                            delete
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Abhishek Singh</td>
+                    <td>198438</td>
+                    <td>Programming</td>
+                    <td>B.Tech</td>
+                    <td>Good</td>
+                    <td>8532800542</td>
+                    <td>18000</td>
+                    <td><span class="material-symbols-outlined">
+                            visibility
+                        </span>
+                        <span class="material-symbols-outlined">
+                            delete
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Abhishek Singh</td>
+                    <td>198438</td>
+                    <td>Programming</td>
+                    <td>B.Tech</td>
+                    <td>Good</td>
+                    <td>8532800542</td>
+                    <td>18000</td>
+                    <td><span class="material-symbols-outlined">
+                            visibility
+                        </span>
+                        <span class="material-symbols-outlined">
+                            delete
+                        </span>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table">
+            <h4>Student Details</h4>
+            <table class="student">
+                <tr>
+                    <th>Name</th>
+                    <th>ID</th>
+                    <th>Date</th>
+                    <th>Parent Name</th>
+                    <th>City</th>
+                    <th>Contact</th>
+                    <th>Class</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td>Abhishek Singh</td>
+                    <td>198438</td>
+                    <td>25/10/2023</td>
+                    <td>Prem Singh</td>
+                    <td>Jaipur</td>
+                    <td>8532800542</td>
+                    <td>VII</td>
+                    <td><span class="material-symbols-outlined">
+                            visibility
+                        </span>
+                        <span class="material-symbols-outlined">
+                            delete
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Abhishek Singh</td>
+                    <td>198438</td>
+                    <td>25/10/2023</td>
+                    <td>Prem Singh</td>
+                    <td>Jaipur</td>
+                    <td>8532800542</td>
+                    <td>VII</td>
+                    <td><span class="material-symbols-outlined">
+                            visibility
+                        </span>
+                        <span class="material-symbols-outlined">
+                            delete
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Abhishek Singh</td>
+                    <td>198438</td>
+                    <td>25/10/2023</td>
+                    <td>Prem Singh</td>
+                    <td>Jaipur</td>
+                    <td>8532800542</td>
+                    <td>VII</td>
+                    <td><span class="material-symbols-outlined">
+                            visibility
+                        </span>
+                        <span class="material-symbols-outlined">
+                            delete
+                        </span>
+                    </td>
+                </tr>
+            </table>
+        </div>
         {% include "CopyRight.html" %}
     </div>
 </body>
