--- a/school_management/Templates/Admin_Student.html
+++ b/school_management/Templates/Admin_Student.html
@@ -39,6 +39,7 @@
         </div>
 
         <div class="table">
+            <h4>Student Details</h4>
             <table class="student">
                 <tr>
                     <th>Name</th>
@@ -47,7 +48,7 @@
                     <th>Parent Name</th>
                     <th>City</th>
                     <th>Contact</th>
-                    <th>Grade</th>
+                    <th>Class</th>
                     <th>Action</th>
                 </tr>
                 <tr>
