--- a/school_management/StaticsFiles/Styles/Admin_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Admin_Dashboard.css
@@ -459,20 +459,111 @@ body {
     }
 }
 
-::-webkit-scrollbar {
+.notice-display::-webkit-scrollbar {
     width: 10px;
 }
 
-::-webkit-scrollbar-track {
+.notice-display::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb {
+.notice-display::-webkit-scrollbar-thumb {
     background: var(--primary);
     border-radius: 10px;
 }
 
 button:hover {
     background: rgba(0, 39, 58, 0.50);
+}
+
+.popup-wrapper {
+    display: none;
+    z-index: 9;
+    position: fixed;
+    width: 100%;
+    overflow: auto;
+    scrollbar-width: 0px;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.6);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
+    >.popup {
+        position: absolute;
+        right: 350px;
+        padding: 20px 30px;
+        width: 40%;
+        background-color: var(--white);
+
+        > .popup-close{
+            position: relative;
+            text-align: right;
+            font-size: 25px;
+            font-weight: normal;
+            font-family: sans-serif;
+            cursor: context-menu;
+        }
+
+        >.popup-content {
+
+            > h4{
+                text-align: center;
+                font-size: 18px;
+                color: var(--primary);
+                text-decoration: underline;
+            }
+
+            >form {
+
+                margin-top: 20px;
+
+                > label{
+                    font-size: 14px;
+                    margin-bottom: 0;
+                    margin-left: 5px;
+
+                }
+
+                >input[type=text],
+                input[type=tel] {
+                    width: 100%;
+                    /* padding: 12px 20px; */
+                    margin: 0px 0;
+                    margin-bottom: 10px;
+                    height: 2.5rem;
+                    display: inline-block;
+                    border: 1px solid #ccc;
+                    border-radius: 4px;
+                    box-sizing: border-box;
+                    outline: none;
+                }
+                > input:focus {
+                    border-color: var(--secondary);
+                    box-shadow: 0 0 0 0.2rem #fb7e5b44;
+                }
+
+                > button{
+                    margin-top: 10px;
+                    display: inline-block;
+                    width: 100%;
+                    background: var(--primary);
+                    height: 2.5rem;
+                    color: var(--white);
+                    border: none;
+                    outline: none;
+                    font-size: 18px;
+                }
+
+            }
+        }
+
+    }
+
+}
+
+.popup-wrapper::-webkit-scrollbar{
+    width: 0px;
 }
