--- a/school_management/Templates/Admin_Employee.html
+++ b/school_management/Templates/Admin_Employee.html
@@ -32,8 +32,41 @@
                         </select>
                     </div>
                 </form>
-                <button>+ Add Employee</button>
+                <button id="add_employee">+ Add Employee</button>
             </div>
+        </div>
+
+        <div class="popup-wrapper">
+
+            <div class="popup">
+
+                <div class="popup-close">X</div>
+
+                <div class="popup-content">
+                    <h4>FILL THE FORM TO ADD NEW EMPLOYEE</h4>
+
+                  <form action="" method="POST">
+                    <label for="name">Name</label> 
+                    <input type="text" name="name"> 
+                    <label for="parent-name">Parent Name</label> 
+                    <input type="text" name="parent-name"> 
+                    <label for="contact">Contact</label>
+                    <input type="tel" name="contact" pattern="[6-9]{1}[0-9]{9}">
+                    <label for="city">City</label>
+                    <input type="text" name="city">
+                    <label for="role">Role</label>
+                    <input type="text" name="role">
+                    <label for="salary">Salary</label>
+                    <input type="text" name="salary">
+
+                    <button type="submit" value="add">Submit</button>
+
+                  </form>
+
+                </div>
+
+            </div>
+
         </div>
 
         <div class="table">
@@ -106,5 +139,7 @@
         {% include "CopyRight.html" %}
 
     </div>
+
+    <script src="{% static 'JavaScript/FormPop.js' %}"></script>
 </body>
 </html>
