--- a/school_management/Templates/Admin_Student.html
+++ b/school_management/Templates/Admin_Student.html
@@ -38,6 +38,39 @@
             </div>
         </div>
 
+        <div class="popup-wrapper">
+
+            <div class="popup">
+
+                <div class="popup-close">X</div>
+
+                <div class="popup-content">
+                    <h4>FILL THE FORM TO ADD NEW EMPLOYEE</h4>
+
+                  <form action="" method="POST">
+                    <label for="name">Name</label> 
+                    <input type="text" name="name"> 
+                    <label for="parent-name">Parent Name</label> 
+                    <input type="text" name="parent-name"> 
+                    <label for="contact">Contact</label>
+                    <input type="tel" name="contact" pattern="[6-9]{1}[0-9]{9}">
+                    <label for="city">City</label>
+                    <input type="text" name="city">
+                    <label for="role">Role</label>
+                    <input type="text" name="role">
+                    <label for="salary">Salary</label>
+                    <input type="text" name="salary">
+
+                    <button type="submit" value="add">Submit</button>
+
+                  </form>
+
+                </div>
+
+            </div>
+
+        </div>
+
         <div class="table">
             <h4>Student Details</h4>
             <table class="student">
@@ -105,6 +138,8 @@
         {% include "CopyRight.html" %}
 
     </div>
+
+    <script src="{% static 'JavaScript/FormPop.js' %}"></script>
 
 </body>
 
