--- a/school_management/Templates/Admin_Teacher.html
+++ b/school_management/Templates/Admin_Teacher.html
@@ -39,6 +39,39 @@
             </div>
         </div>
 
+        <div class="popup-wrapper">
+
+            <div class="popup">
+
+                <div class="popup-close">X</div>
+
+                <div class="popup-content">
+                    <h4>FILL THE FORM TO ADD NEW EMPLOYEE</h4>
+
+                  <form action="" method="POST">
+                    <label for="name">Name</label> 
+                    <input type="text" name="name"> 
+                    <label for="parent-name">Parent Name</label> 
+                    <input type="text" name="parent-name"> 
+                    <label for="contact">Contact</label>
+                    <input type="tel" name="contact" pattern="[6-9]{1}[0-9]{9}">
+                    <label for="city">City</label>
+                    <input type="text" name="city">
+                    <label for="role">Role</label>
+                    <input type="text" name="role">
+                    <label for="salary">Salary</label>
+                    <input type="text" name="salary">
+
+                    <button type="submit" value="add">Submit</button>
+
+                  </form>
+
+                </div>
+
+            </div>
+
+        </div>
+
         <div class="teachers-card">
             <div class="card">
                 <div class="img">
@@ -210,6 +243,8 @@
         {% include "CopyRight.html" %}
 
     </div>
+
+    <script src="{% static 'JavaScript/FormPop.js' %}"></script>
 </body>
 
 </html>
