Work on Frontend Templates

--- a/school_management/StaticsFiles/Styles/Admin_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Admin_Dashboard.css
@@ -379,6 +379,7 @@ body {
             padding: 20px;
             margin-top: 10px;
             cursor: context-menu;
+            margin-right: 10px;
 
             >h3 {
                 margin-bottom: 10px;
