--- a/school_management/Templates/Admin_Employee.html
+++ b/school_management/Templates/Admin_Employee.html
@@ -32,7 +32,7 @@
                         </select>
                     </div>
                 </form>
-                <button id="add_employee">+ Add Employee</button>
+                <button id="add_pop_button">+ Add Employee</button>
             </div>
         </div>
 
