--- a/school_management/Templates/Admin_Student.html
+++ b/school_management/Templates/Admin_Student.html
@@ -34,7 +34,7 @@
                         </select>
                     </div>
                 </form>
-                <button>+ Add Student</button>
+                <button id="add_pop_button">+ Add Student</button>
             </div>
         </div>
 
