--- a/school_management/Templates/Admin_Teacher.html
+++ b/school_management/Templates/Admin_Teacher.html
@@ -35,7 +35,7 @@
                         </select>
                     </div>
                 </form>
-                <button>+ Add Teacher</button>
+                <button id="add_pop_button">+ Add Teacher</button>
             </div>
         </div>
 
