Work on Frontend Templates

--- a/school_management/StaticsFiles/Styles/Navbar.css
+++ b/school_management/StaticsFiles/Styles/Navbar.css
@@ -58,7 +58,7 @@
             
         }
         
-        > a:nth-child(1){
+        > .active{
             padding: 10px;
             border-radius: 10px;
             background-color: var(--background-white);
