--- a/school_management/Templates/Admin_Navbar.html
+++ b/school_management/Templates/Admin_Navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load active_link_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,23 +16,23 @@
 <body>
     <nav class="side_nav">
         <div class="type">
-            <h4>A</h4>
+            <h4>A</h4>  
         </div>
 
         <div class="links">
-            <a href="" title="Home"><span class="material-symbols-outlined">
+            <a href="{% url 'admin_dashboard' %}" class="{% active_link 'admin_dashboard' 'active' %}" title="Home"><span class="material-symbols-outlined">
                     home
                 </span></a>
-            <a href="{% url 'admin_student' %}" title="Student"><span class="material-symbols-outlined">
+            <a class="{% active_link 'admin_student' 'active' %}" href="{% url 'admin_student' %}" title="Student"><span class="material-symbols-outlined">
                     school
                 </span></a>
-            <a href="{% url 'admin_teacher' %}" title="Teacher"><span class="material-symbols-outlined">
+            <a class="{% active_link 'admin_teacher' 'active' %}" href="{% url 'admin_teacher' %}" title="Teacher"><span class="material-symbols-outlined">
                     person
                 </span></a>
-            <a href="{% url 'admin_notice' %}" title="Notice Board"><span class="material-symbols-outlined">
+            <a class="{% active_link 'admin_notice' 'active' %}" href="{% url 'admin_notice' %}" title="Notice Board"><span class="material-symbols-outlined">
                     note_alt
                 </span></a>
-            <a href="{% url 'admin_employee' %}" title="Employee"><span class="material-symbols-outlined">
+            <a class="{% active_link 'admin_employee' 'active' %}" href="{% url 'admin_employee' %}" title="Employee"><span class="material-symbols-outlined">
                     person_apron
                 </span></a>
 
